# mailing_list_managment

./: README.md  data_blog.json  data_mailing.json  data_users.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blog/templatetags/: template_tags.py
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  jobs.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_mailinglistsettings_author_and_more.py  0004_message_author_and_more.py  0005_alter_mailinglistsettings_end_of_mailing.py  0006_alter_mailinglistsettings_options_and_more.py  0007_alter_mailinglistsettings_options_and_more.py  0008_alter_mailinglistsettings_options_and_more.py  0009_alter_mailinglistsettings_end_of_mailing.py
mailing/templates/mailing/: base.html  index.html  logs_confirm_delete.html  logs_detail.html  logs_list.html  mailinglistsettings_confirm_delete.html  mailinglistsettings_detail.html  mailinglistsettings_form.html  mailinglistsettings_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py  0002_client_owner.py  0003_alter_user_options.py
users/templates/users/: client_confirm_delete.html  client_detail.html  client_form.html  error_page.html  (+9 more)
