[tool.poetry]
name = "mailing-list-managment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mailing_list_managment"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
django-crontab = "^0.7.1"
apscheduler = "^3.10.4"
django-apscheduler = "^0.6.2"
pillow = "^10.1.0"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
